--- a/fly.toml
+++ b/fly.toml
@@ -1,10 +1,5 @@
-# fly.toml app configuration file generated for fly-suave on 2025-11-20T06:42:39Z
-#
-# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
-#
-
-app = 'fly-suave'
-primary_region = 'sjc'
+app = 'your-app-name'  # Change this to your desired app name
+primary_region = 'sjc'  # Change to your preferred region (sjc = San Jose)
 
 [build]
 
@@ -16,8 +11,18 @@ primary_region = 'sjc'
   min_machines_running = 0
   processes = ['app']
 
+  [[http_service.checks]]
+    grace_period = "10s"
+    interval = "30s"
+    method = "GET"
+    timeout = "5s"
+    path = "/debug"
+
+[env]
+  PORT = "3000"
+  NODE_ENV = "production"
+
 [[vm]]
   memory = '1gb'
   cpu_kind = 'shared'
   cpus = 1
-  memory_mb = 2048
